--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
+    "/js/admin/app.js": "/js/admin/app.js",
     "/js/app.js": "/js/app.js",
-    "/css/admin.css": "/css/admin.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/admin/app.css": "/css/admin/app.css"
 }
