- eluceo/ical updated from 0.15.0 to 0.15.1    See changes: https://github.com/markuspoerschke/iCal/compare/0.15.0...0.15.1    Release notes: https://github.com/markuspoerschke/iCal/releases/tag/0.15.1
 - symfony/polyfill-ctype updated from v1.11.0 to v1.12.0
   See changes: https://github.com/symfony/polyfill-ctype/compare/v1.11.0...v1.12.0
   Release notes: https://github.com/symfony/polyfill-ctype/releases/tag/v1.12.0

 - vlucas/phpdotenv updated from v3.4.0 to v3.6.0
   See changes: https://github.com/vlucas/phpdotenv/compare/v3.4.0...v3.6.0
   Release notes: https://github.com/vlucas/phpdotenv/releases/tag/v3.6.0

 - symfony/css-selector updated from v4.3.2 to v4.3.4
   See changes: https://github.com/symfony/css-selector/compare/v4.3.2...v4.3.4
   Release notes: https://github.com/symfony/css-selector/releases/tag/v4.3.4

 - symfony/polyfill-php72 updated from v1.11.0 to v1.12.0
   See changes: https://github.com/symfony/polyfill-php72/compare/v1.11.0...v1.12.0
   Release notes: https://github.com/symfony/polyfill-php72/releases/tag/v1.12.0

 - symfony/polyfill-mbstring updated from v1.11.0 to v1.12.0
   See changes: https://github.com/symfony/polyfill-mbstring/compare/v1.11.0...v1.12.0
   Release notes: https://github.com/symfony/polyfill-mbstring/releases/tag/v1.12.0

 - symfony/var-dumper updated from v4.3.2 to v4.3.4
   See changes: https://github.com/symfony/var-dumper/compare/v4.3.2...v4.3.4
   Release notes: https://github.com/symfony/var-dumper/releases/tag/v4.3.4

 - symfony/routing updated from v4.3.2 to v4.3.4
   See changes: https://github.com/symfony/routing/compare/v4.3.2...v4.3.4
   Release notes: https://github.com/symfony/routing/releases/tag/v4.3.4

 - symfony/process updated from v4.3.2 to v4.3.4
   See changes: https://github.com/symfony/process/compare/v4.3.2...v4.3.4
   Release notes: https://github.com/symfony/process/releases/tag/v4.3.4

 - symfony/polyfill-php73 updated from v1.11.0 to v1.12.0
   See changes: https://github.com/symfony

--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "eluceo/ical": "^0.15.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/nova": "^2.2",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
@@ -59,5 +61,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ]
 }
