--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "drobee/nova-sluggable": "^1.2",
         "eluceo/ical": "^0.15.0",
         "fideloper/proxy": "^4.0",
+        "jenssegers/optimus": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/nova": "^2.5",
         "laravel/tinker": "^1.0"
