--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "roave/security-advisories": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
